RESPOSTAS COM TESTES

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -40,28 +40,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "String invertida: nohtyP\n"
+      "O número 8 pertence à sequência de Fibonacci.\n"
      ]
     }
    ],
    "source": [
-    "def inverter_string(s):\n",
-    "    string_invertida = \"\"\n",
-    "    for i in range(len(s)-1, -1, -1):\n",
-    "        string_invertida += s[i]\n",
-    "    return string_invertida\n",
+    "def pertence_a_fibonacci(numero):\n",
+    "    a, b = 0, 1\n",
+    "    \n",
+    "    while b < numero:\n",
+    "        a, b = b, a + b\n",
     "\n",
-    "# Exemplo de uso\n",
-    "entrada = input(\"Digite uma string: \")\n",
-    "resultado = inverter_string(entrada)\n",
-    "print(\"String invertida:\", resultado)\n"
+    "    if b == numero or numero == 0:\n",
+    "        return f\"O número {numero} pertence à sequência de Fibonacci.\"\n",
+    "    else:\n",
+    "        return f\"O número {numero} NÃO pertence à sequência de Fibonacci.\"\n",
+    "\n",
+    "numero = int(input(\"Digite um número: \"))\n",
+    "print(pertence_a_fibonacci(numero))\n"
    ]
   },
   {
@@ -130,9 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SP: 37.53%\n",
+      "RJ: 20.29%\n",
+      "MG: 16.17%\n",
+      "ES: 15.03%\n",
+      "Outros: 10.98%\n"
+     ]
+    }
+   ],
    "source": [
     "def calcular_percentuais(faturamento_estados):\n",
     "    total = sum(faturamento_estados.values())\n",
@@ -162,9 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String invertida: nohtyP\n"
+     ]
+    }
+   ],
    "source": [
     "def inverter_string(s):\n",
     "    string_invertida = \"\"\n",
